--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.2",
     "@openzeppelin/contracts": "^4.9.2",
+    "@typechain/ethers-v6": "^0.4.3",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
@@ -25,6 +26,7 @@
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.3",
     "ts-node": "^10.9.1",
+    "typechain": "^8.3.2",
     "typescript": "^5.1.3"
   },
   "scripts": {
