Added package-lock.json yarn.lock to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ node_modules/
 
 .prettierrc.js
 pnpm-lock.yaml
-package.json
+package-lock.json
+yarn.lock
 
 contractsInfo.json
 deployments/hardhat
